--- a/ch1_standdeg_seedbank_specialtraits.Rmd
+++ b/ch1_standdeg_seedbank_specialtraits.Rmd
@@ -172,7 +172,7 @@ sort(unique(seedbank_fire$species_diversity))
 write.csv(seedbank_fire, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/seedbank_fire.csv")
 ```
 
-# Germination of fire following species
+# 1. Absolute germination of fire following species
 ```{r exploration germination, include=TRUE}
 view(seedbank_fire %>% 
   na.omit() %>%
@@ -200,16 +200,18 @@ seedbank_fire %>%
   group_by(site) %>%  # group by site 
   summarise(total_germination = sum(count), 
             total_species = length(unique(species_diversity)),
+            total_family = length(unique(family)),
             average_germ_pergsoil = round(mean(n_per_g), 4), 
             SE = round(((sd(n_per_g))/sqrt(length((n_per_g)))),4)
             )
-# site    total_germination   total_species   average_germ_pergsoil
-# INT1	    10    	          3                 0.005		
-# INT2    	7	                4                 0.005		
-# INT3    	11	              3                 0.004		
-# ENH1	    9	                4                 0.004		
-# ENH2    	11	              8                 0.003	
+# site    total_germination   total_species   average_germ_pergsoil   total_family
+# INT1	    10    	          3                 0.005		                2
+# INT2    	7	                4                 0.005			              3
+# INT3    	11	              3                 0.004			              2
+# ENH1	    9	                4                 0.004			              4
+# ENH2    	11	              8                 0.003		                6
 
+# treatment
 seedbank_fire %>% 
   na.omit() %>%
   group_by(treatment) %>%  # group by treatment
@@ -218,6 +220,16 @@ seedbank_fire %>%
 # charate	      16			
 # oven	        15			
 # ovenchar	    17	
+ggqqplot(seedbank_fire$n_per_g) 
+shapiro.test(seedbank_fire$n_per_g) # not transformed, not sig
+kruskal.test(n_per_g ~ treatment, data = seedbank_fire)
+# data:  n_per_g by treatment
+# Kruskal-Wallis chi-squared = 0.68986, df = 2, p-value = 0.7083
+pairwise.wilcox.test(seedbank_fire$n_per_g, seedbank_fire$treatment,
+                 p.adjust.method = "BH")
+#           charate oven
+# oven      0.77    -   
+# ovenchar  1.00    0.77
 
 seedbank_fire %>% 
   na.omit() %>%
@@ -228,19 +240,26 @@ seedbank_fire %>%
 # forb	    33			
 # shrub	    15	
 ```
-# Seed density 
-```{r seed density visualization}
+
+# 2. Seed density 
+
+## a) SEPERATE depths
+
+### - visualize data
+```{r seed density with seperate soil depths visualization}
 boxplot(n_per_g ~ site, data=seedbank_fire, main="Fire following seeds/g by site",
    xlab="Site", ylab="Fire Following seeds per gram")
 histogram(seedbank_fire$n_per_g)
-length(seedbank_fire$n_per_g) #44 
+length(seedbank_fire$n_per_g) # <-- N = 44 
 
+qplot(site, n_per_g, data = seedbank_fire)
 qplot(site, n_per_g, data = seedbank_fire, facets = . ~ depth_name)
 
 ```
 
-### normality
-```{r seed density normality}
+### - normality
+
+```{r seed density normality with seperate soil depths}
 ggqqplot(seedbank_fire$n_per_g) 
 shapiro.test(seedbank_fire$n_per_g) # not transformed
 # data:  seedbank_fire$n_per_g
@@ -249,29 +268,15 @@ shapiro.test(seedbank_fire$n_per_g) # not transformed
 ggqqplot(seedbank_fire$n_per_g_log) 
 shapiro.test(seedbank_fire$n_per_g_log) # log transformed
 # data:  seedbank_fire$n_per_g_log
-# W = 0.78523, p-value = 1.414e-06 <-- both aren't great :/
+# W = 0.78523, p-value = 1.414e-06 <-- even worse :/
 ```
 
-### differences by site - cat
-```{r seed density by site normality}
-kruskal.test(n_per_g ~ site, data = seedbank_fire)
-# data:  n_per_g by site
-# Kruskal-Wallis chi-squared = 6.4651, df = 4, p-value = 0.167 <-- seed density by site is not sig different
-
-pairwise.wilcox.test(seedbank_fire$n_per_g, seedbank_fire$site,
-                 p.adjust.method = "BH")
-#      INT1 INT2 INT3 ENH1
-# INT2 0.55 -    -    -   
-# INT3 0.47 0.75 -    -   
-# ENH1 0.32 0.55 0.85 -   
-# ENH2 0.27 0.31 0.55 0.55
-```
-### differences by native shrub
-```{r}
-ggplot(data = seedbank_fire, 
+### - differences by native shrub
+```{r seed density by native shrub seperate soil depths}
+ggplot(data = seedbank_fire, # <-- not combining surface and below soil samples. 
        aes(x = native_shrub*100, y = n_per_g, color = site)) + #color = standtype
   geom_point(size = 3, alpha = 0.8) +
-  ylim(0, 0.01)+
+  ylim(0, 0.5)+
   xlim(0,100) +
   geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
   # scale_color_manual(values = c(standcolors),
@@ -294,12 +299,12 @@ summary(fire_seeddensity_nativeshrub.lm)
 # F-statistic: 4.545 on 1 and 42 DF,  p-value: 0.03892 <-- sig dif
 ```
 
-### differences by non-native grass
-```{r seed density by nn grass cover}
+### - differences by non-native grass
+```{r seed density by nn grass cover seperate soil depths}
 ggplot(data = seedbank_fire, 
        aes(x = nonnative_grass*100, y = n_per_g, color = site)) + #color = standtype
   geom_point(size = 3, alpha = 0.8) +
-  ylim(0, 0.01)+
+  ylim(0, 0.5)+
   xlim(0,100) +
   geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
   # scale_color_manual(values = c(standcolors),
@@ -322,31 +327,59 @@ summary(fire_seeddensity_nngrass.lm)
 # F-statistic: 9.344 on 1 and 42 DF,  p-value: 0.003881 <-- sig diff
 ```
 
-# site differences combining surface and below germination data
-```{r explore fire following seedbanks MEAN germination, include=TRUE}
-seedbank_fire_totalemerg <- seedbank_fire %>% 
+### - differences by site - cat
+```{r seed density by site stats seperate soil depths}
+kruskal.test(n_per_g ~ site, data = seedbank_fire)
+# data:  n_per_g by site
+# Kruskal-Wallis chi-squared = 6.4651, df = 4, p-value = 0.167 <-- seed density by site is not sig different
+
+pairwise.wilcox.test(seedbank_fire$n_per_g, seedbank_fire$site,
+                 p.adjust.method = "BH")
+#      INT1 INT2 INT3 ENH1
+# INT2 0.55 -    -    -   
+# INT3 0.47 0.75 -    -   
+# ENH1 0.32 0.55 0.85 -   
+# ENH2 0.27 0.31 0.55 0.55
+```
+
+## b) COMBINING surface and below germination data
+```{r explore fire following seedbanks combine soil depth, include=TRUE}
+
+# create combined soil depth df = total emergence by site
+# N = 14 data points
+# 
+seedbank_fire_totalemerg <- seedbank_fire %>%  
   na.omit() %>%
-  group_by(site, soilcore) %>% 
+  group_by(site, soilcore, stand_core, native_shrub, nonnative_grass) %>% 
   summarise(sum_germination_g = round(sum(n_per_g),4)) %>% 
   mutate(sum_germ_g_log = log(sum_germination_g))
-#  site  stand_core sum_germination_g
-#    <fct> <fct>                  <dbl>
-#  1 INT1  INT1_1                0.0393
-#  2 INT1  INT1_3                0.0118
-#  3 INT2  INT2_5                0.0061
-#  4 INT2  INT2_6                0.0218
-#  5 INT3  INT3_7                0.029 
-#  6 INT3  INT3_8                0.0061
-#  7 INT3  INT3_9                0.0122
-#  8 ENH1  ENH1_1                0.0173
-#  9 ENH1  ENH1_4                0.0086
-# 10 ENH2  ENH2_6                0.0058
-# 11 ENH2  ENH2_7                0.0058
-# 12 ENH2  ENH2_8                0.0086
-# 13 ENH2  ENH2_9                0.0086
-# 14 ENH2  ENH2_10               0.0029
+#  site  soilcore native_shrub nonnative_grass sum_germination_g sum_germ_g_log
+#  
+#  1 INT1  1               0.707          0.244             0.0393          -3.24
+#  no fire followers in INT1 - mid
+#  2 INT1  3               0.707          0.244             0.0118          -4.44
+#  
+#  #  no fire followers in INT2 - top
+#  3 INT2  5               0.707          0.0732            0.0061          -5.10
+#  4 INT2  6               0.707          0.0732            0.0218          -3.83
+#  
+#  5 INT3  7               0.951          0.122             0.029           -3.54
+#  6 INT3  8               0.951          0.122             0.0061          -5.10
+#  7 INT3  9               0.951          0.122             0.0122          -4.41
+#  
+#  8 ENH1  1               0.642          0.626             0.0173          -4.06
+#  no fire followers in ENH1 - 2
+#  no fire followers in ENH1 - 3
+#  9 ENH1  4               0.642          0.626             0.0086          -4.76
+#  no fire followers in ENH1 - 5
+#  
+# 11 ENH2  6               0.390          0.846             0.0058          -5.15
+# 12 ENH2  7               0.390          0.846             0.0058          -5.15
+# 13 ENH2  8               0.390          0.846             0.0086          -4.76
+# 14 ENH2  9               0.390          0.846             0.0086          -4.76
+# 10 ENH2  10              0.390          0.846             0.0029          -5.84
 
-# calculating avergerge germination by combining surface and deep soil cores
+# calculating average germination 
 seedbank_fire_totalemerg %>% 
   na.omit() %>%
   group_by(site) %>%  # group by site
@@ -362,26 +395,174 @@ seedbank_fire_totalemerg %>%
 # INT3	0.01576667	0.011859314	3	0.006846978
 # ENH1	0.01295000	0.006151829	2	0.004350000
 # ENH2	0.00634000	0.002378655	5	0.001063767
+```
 
+### - normality
+```{r seed density combining soil depth normality}
 ggqqplot(seedbank_fire_totalemerg$sum_germination_g) 
 shapiro.test(seedbank_fire_totalemerg$sum_germination_g) # not transformed
 # data:  seedbank_fire_totalemerg$sum_germination_g
-# W = 0.81117, p-value = 0.006883
+# W = 0.81117, p-value = 0.006883 <- not norm
 
 ggqqplot(seedbank_fire_totalemerg$sum_germ_g_log) 
 shapiro.test(seedbank_fire_totalemerg$sum_germ_g_log) # log transformed
 # data:  seedbank_fire_totalemerg$sum_germ_g_log
-# W = 0.95804, p-value = 0.6908 <-- Normally distributed! WHAT!?!?!
+# W = 0.95804, p-value = 0.6908 <---------------------- Normally distributed! WHAT!?!?!
+```
+
+### - differences by native shrub
+```{r seed density by native shrub cover combining soil depths}
+
+# using LOGGED data
+
+ggplot(data = seedbank_fire_totalemerg, # <-- not combining surface and below soil samples. 
+       aes(x = native_shrub*100, y = sum_germ_g_log, color = site)) + #color = standtype
+  geom_point(size = 3, alpha = 0.8) +
+  ylim(-10, 0)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  # scale_color_manual(values = c(standcolors),
+  #                     name = "Hillslope",
+  #                     # labels = c("DEG2" = "shrub dominated", 
+  #                     #            "matrix" = "matrix", 
+  #                     #            "degraded" = "grass dominated")
+  #                     ) + #rename standtypes labels
+  labs(x = "Native shrub cover (%)", 
+       y = "Fire Following Seed density (log(#/g))", 
+       title = "Site seed density by Native Shrub Cover") +
+  theme_bw() +  
+  stat_poly_line() +
+  stat_poly_eq(use_label(c("eq", "R2")))
+
+seedbank_fire_totalemerg_natshrub.lm = lm(sum_germ_g_log ~ native_shrub, data=seedbank_fire_totalemerg)
+summary(seedbank_fire_totalemerg_natshrub.lm)
+# Residual standard error: 0.644 on 12 degrees of freedom
+# Multiple R-squared:  0.2522,	Adjusted R-squared:  0.1898 
+# F-statistic: 4.046 on 1 and 12 DF,  p-value: 0.06728 <-- sig?
+```
+
+
+```{r seed density by nonnative seperate soil depths}
+
+# using NOT logged seed density data
+
+ggplot(data = seedbank_fire_totalemerg, 
+       aes(x = native_shrub*100, y = sum_germination_g, color = site)) + #color = standtype
+  geom_point(size = 3, alpha = 0.8) +
+  ylim(0, 0.5)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  # scale_color_manual(values = c(standcolors),
+  #                     name = "Hillslope",
+  #                     # labels = c("DEG2" = "shrub dominated", 
+  #                     #            "matrix" = "matrix", 
+  #                     #            "degraded" = "grass dominated")
+  #                     ) + #rename standtypes labels
+  labs(x = "Native shrub cover (%)", 
+       y = "Seed density of Fire Followers (#/g))", 
+       title = "Seed density of Fire Followers by Native Shrub Cover") +
+  theme_bw() +  
+  stat_poly_line() +
+  stat_poly_eq(use_label(c("eq", "R2")))
+
+fire_nativeshrub.lm = lm(sum_germination_g ~ native_shrub, data=seedbank_fire_totalemerg)
+summary(fire_nativeshrub.lm)
+# Residual standard error: 0.009762 on 12 degrees of freedom
+# Multiple R-squared:  0.1858,	Adjusted R-squared:  0.1179 
+# F-statistic: 2.738 on 1 and 12 DF,  p-value: 0.1239 <-- not sig
+
+```
+
+
+### - differences by non-native grass
+```{r seed density by nonnative grass cover combining soil depths}
+
+# using LOGGED data
+
+ggplot(data = seedbank_fire_totalemerg, # <-- not combining surface and below soil samples. 
+       aes(x = nonnative_grass*100, y = sum_germ_g_log, color = site)) + #color = standtype
+  geom_point(size = 3, alpha = 0.8) +
+  ylim(-10, 0)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  # scale_color_manual(values = c(standcolors),
+  #                     name = "Hillslope",
+  #                     # labels = c("DEG2" = "shrub dominated", 
+  #                     #            "matrix" = "matrix", 
+  #                     #            "degraded" = "grass dominated")
+  #                     ) + #rename standtypes labels
+  labs(x = "Non-native grass cover (%)", 
+       y = "Fire Following Seed density (log(#/g))", 
+       title = "Site seed density by Non-native Grass Cover") +
+  theme_bw() +  
+  stat_poly_line() +
+  stat_poly_eq(use_label(c("eq", "R2")))
+
+seedbank_fire_totalemerg_nngrass.lm = lm(sum_germ_g_log ~ nonnative_grass, data=seedbank_fire_totalemerg)
+summary(seedbank_fire_totalemerg_nngrass.lm)
+# Residual standard error: 0.6376 on 12 degrees of freedom
+# Multiple R-squared:  0.2669,	Adjusted R-squared:  0.2058 
+# F-statistic: 4.368 on 1 and 12 DF,  p-value: 0.05857 <-- not sig?
+```
+
+```{r seed density by nonnative grass cover combining soil depths not logged data}
+
+# using NOT logged data
+
+ggplot(data = seedbank_fire_totalemerg, # <-- not combining surface and below soil samples. 
+       aes(x = nonnative_grass*100, y = sum_germination_g, color = site)) + #color = standtype
+  geom_point(size = 3, alpha = 0.8) +
+  ylim(0, 0.5)+
+  xlim(0,100) +
+  geom_smooth(method = "lm", se = FALSE, linetype = "solid", color = "black") +  # lm, loess, glm
+  # scale_color_manual(values = c(standcolors),
+  #                     name = "Hillslope",
+  #                     # labels = c("DEG2" = "shrub dominated", 
+  #                     #            "matrix" = "matrix", 
+  #                     #            "degraded" = "grass dominated")
+  #                     ) + #rename standtypes labels
+  labs(x = "Non-native grass cover (%)", 
+       y = "Fire Following Seed density (log(#/g))", 
+       title = "Site seed density by Non-native Grass Cover") +
+  theme_bw() +  
+  stat_poly_line() +
+  stat_poly_eq(use_label(c("eq", "R2")))
+
+fire_seeddensity_nngrass.lm = lm(sum_germination_g ~ nonnative_grass, data=seedbank_fire_totalemerg)
+summary(fire_seeddensity_nngrass.lm)
+# Residual standard error: 0.009547 on 12 degrees of freedom
+# Multiple R-squared:  0.2211,	Adjusted R-squared:  0.1562 
+# F-statistic: 3.407 on 1 and 12 DF,  p-value: 0.08972 <-- not sig
+```
+
+### - differences site - cat
+```{r seed density by site combining soil depths logged}
+
+# using LOGGED data
 
 aov(sum_germ_g_log ~ site, seedbank_fire_totalemerg)
 summary(aov(sum_germ_g_log ~ site, seedbank_fire_totalemerg))
-#    Df Sum Sq Mean Sq F value Pr(>F)
-# site         4  2.867  0.7167   1.703  0.233
-# Residuals    9  3.788  0.4209 
+#             Df  Sum Sq  Mean Sq   F value   Pr(>F)
+# site         4  2.867   0.7167    1.703     0.233 <-- no sig diff between sites
+# Residuals    9  3.788   0.4209 
 ```
 
+```{r seed density by site combining soil depths}
+# using not logged data
+
+kruskal.test(sum_germination_g ~ site, data = seedbank_fire_totalemerg)
+# data:  sum_germination_g by site
+# Kruskal-Wallis chi-squared = 6.2081, df = 4, p-value = 0.1841 <-- not sig
+
+pairwise.wilcox.test(seedbank_fire_totalemerg$sum_germination_g, seedbank_fire_totalemerg$site,
+                 p.adjust.method = "BH")
+```
+
+
 # Species diversity
-```{r spp diversity}
+```{r spp diversity by native shrub}
+
+
 #### STEPHANIE - START HERE ---> calculate the number of speices per soil_core, then average by A) hillslope (categorical) and then B) by native shrub cover and non-native grass cover
 
 ```
